granite-4-0-h-tiny/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30s
  labels:
    inferenceservice-name: granite-4-0-h-tiny
  name: granite-4-0-h-tiny
  namespace: summit-connect-2025
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: granite-4-0-h-tiny-predictor
    weight: 100
  wildcardPolicy: None
